# -Using-pow-versus-for-squaring-a-value

./: CMakeLists.txt  HW2.ipynb  README.md  hw5.ipynb  metadata.yml  pov_multi.cpp  readme_homewok1.txt
